Optomizing assets and adding lazy loading

--- a/CSS/global.css
+++ b/CSS/global.css
@@ -33,7 +33,7 @@ h1{
 }
 
 header{
-    background-image: url(../Img/IMG_E0900.JPG);
+    background-image: url(../Img/MainCoverImageSmall.jpg);
     background-position: center;
     background-position-y: top;
     background-size: cover;
