--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,5 @@
 #landingSection{
-    background-image: url(../Img/IMG_E0900.JPG);
+    background-image: url(../Img/MainCoverImageSmall.jpg);
     height: 100vh;
     background-position: center;
     background-size: cover;
